--- a/Web Pages/WebD.css
+++ b/Web Pages/WebD.css
@@ -1,3 +1,4 @@
+
 /* <style>
 ul {
   list-style-type: none;
@@ -96,6 +97,11 @@ li a:hover {
 .active {
   background-color: #4CAF50;
 }
+footer {
+  display: flex;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
@@ -155,11 +161,27 @@ li a:hover {
 }
 
 /* Footer */
-.footer {
+footer {
   padding: 20px;
   text-align: center;
   background: #ddd;
   margin-top: 20px;
+}
+/*you guys add your photos in the respective id !!!!(img tag provided in html)*/
+#i-1,
+#i-2,
+#i-3 {
+    padding-left: 20px;
+    margin-left: 100px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+/* social icons*/
+.social{
+  text-align: center;
+  justify-content: center;
+  color:black;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
@@ -168,6 +190,15 @@ li a:hover {
     width: 100%;
     padding: 0;
   }
+  footer{
+    flex-direction: column;
+}
+#i-1,
+#i-2,
+#i-3{
+  margin-left: auto;
+  margin-right: auto;
+}
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
